 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 6
============
* [cdunde]: Added full game support for Xonotic including .md3 model displaying.

* [DanielPharos]: Fully fixed HL1 BSP MipTex saving.

* [DanielPharos]: Try to save everything in a texturelist. Helps HL1 BSP MipTex saving.

* [cdunde]: Added Quake 1 and Hexen II Specific items for Model Root in the Model Editor.

* [DanielPharos]: Fixed SOF1 tools: they don't work with the proper slashes.

* [DanielPharos]: Moved some map options around to make them more findable, and to make them work again.

6.6.0 Beta 5
============
* [DanielPharos]: Added DOOM .wad file reading support, per user request. Note: Saving will output a Quake wad!

* [DanielPharos]: Made the .map importer more resilient against bad brushes.

* [cdunde]: Added Entities and Textures add-ons for Quake 3 Smoking Guns stand alone game.

* [cdunde]: Added mission pak support for Quake2 Knightmare.

* [cdunde]: Added mission pak support for Quake2 Zaero.

* [cdunde]: Fixed rotation values for YZ view not working in Model Editor.

* [cdunde/DanielPharos]: Updated Model Editor texture paint functions to do gray-scale and blue-scale
          - for texture mapping and greatly improved airbrush function quality for fade in effect.

* [cdunde]: Setting up system for bone.dictspec['type'] to store what kind of IMPORTER or
          - default QuArK new bones ('type' = qrk) a bone is.
          - Each importer sets its own 'type' as it creates its bones and these do not change.
          - The type is used by EXPORTERS as an indicator as to how they need to be processed
          - for EXPORTING them to another model format.
