@@ -57,7 +57,6 @@ Code    abbreviation            Name          or Screen name    taken
  v      Warsow          Warsow                cdunde            04/21/08
  w      WildWest        WildWest              Silverpaladin     08/31/03
  x      ModelEditor     ModelEditor           cdunde            05/07/10
- y      Xonotic         Xonotic               cdunde            12/17/12
  z      NEXUIZ          NEXUIZ                cdunde            04/03/08
 
 Note: Some of the above Authors and dates may not be correct
