@@ -27,6 +27,9 @@ QQRKSRC1
 //$Header$
 
 //$Log$
+//Revision 1.544  2012/12/19 07:19:07  cdunde
+//Xonotic game code correction.
+//
 //Revision 1.543  2012/12/18 05:52:22  cdunde
 //Setup a new game support for Xonotic with .md3 model displaying.
 //
@@ -4293,79 +4296,6 @@ QQRKSRC1
         DecimalPlaces = '5'
         Form = "GameWildWest"
       }
-
-      Xonotic:config =
-      {
-        CheckAddonInstalled = "1"
-        Game = "Xonotic"
-        Code = "y" // Hardcoded value in Setup.PAS
-
-        Program = "xonotic-sdl.exe +map %filename% +seta sv_pure 0"
-        Directory = "C:\Program Files\Xonotic"
-        CheckDirectory = "xonotic-sdl.exe"   // hidden setting
-
-        CD = ""
-        CDDir = "\Install\data"   // hidden setting
-
-        DefaultTexture = "evil1_floors/metalflr1c"
-        DefaultTextureTrigger = "common/trigger"
-        DefaultTextureClip = "common/clip"
-        DefaultTextureOrigin = "common/origin"
-        DefaultTextureCaulk = "common/caulk"
-        DefaultTextureScale = "0.5"
-        LightingInnerConeKeyword = "radius"    // <-- ex: "" if game does not use or ex: "_cone" is the specifics name that gives the spotlight inter size.
-        LightingOuterConeKeyword = ""    // <-- ex: "" if game does not use or ex: "_cone2" is the specifics name that gives the spotlight outer size.
-
-        Console = "1"
-        BuildPgmsDir = "C:\Program Files\Xonotic\XonoticTools\q3map"
-        StupidBuildToolKludge = "1" // Run tools from base directory setting
-        OutputMapFormat = "Brush Primitives"
-        ForceFaceFlags = ""
-        AlwaysWriteThreeFields = "1"
-        SupportsBrushPrim = "1"
-        BuildPgm1  = "Q3MAP.EXE"
-        BuildArgs1 = ""
-        BuildCheck1= "+BSP,-LIN{LoadLinFile}"
-        BuildPgm2  = "Q3MAP.EXE"
-        BuildArgs2 = "-vis -saveprt"
-        BuildPgm3  = "Q3MAP.EXE"
-        BuildArgs3 = "-light"
-        BuildPgm4  = "BSPC.EXE"
-        BuildArgs4 = "-bsp2aas %file%.BSP -output %mappath%"
-        BuildCheck4= "+AAS"
-
-        MapCommentsPrefix = "//"
-
-        TexturesPath = ""
-        ShadersPath = "scripts"
-        Q2TexFlags = "1"
-        ShadersType = "a"                       // This game has Quake 3-type shaders
-
-        BezierPatchSupport = "1" // this game supports bezier-patches
-        BezierPatchPluginPrefixes = "MB2" // Prefix of the MB2*.PY files. You can also specify the value: "MB2"$0D"MB3"$0D"MB4"
-
-        TextureFormat = ".dds"             // primary texture fileextension
-        TextureFileExtensions = ".dds,.jpg"     // possible texture fileextensions
-        TextureWriteFormat = ".jpg"
-        TextureWriteFormatA = ".dds"
-        TextureShaders = "scripts/quark.shader"
-
-        BaseDir = "data"
-        tmpQuArK = "data"
-        MapLimit = '65536 65536 65536'
-        ExtraCmdLine = "+set fs_game %gamedir%"
-        RunMapCmdLine = "+devmap %filename%"
-        AddOns = "Bezier_Library.qrk"$0D"Q3ArchLib.qrk"$0D"DataXonotic.qrk"$0D"XonoticEntities.qrk"$0D"XonoticTextures.qrk"$0D"XonoticScripts.qrk"
-        AlwaysPak = ""
-        PakExt = ".pk3"
-        PakFormat = "*.PK3"
-        PakMaxNumber = "99"
-        LightFactor = '0.9'
-        3DLight = '512'
-        DecimalPlaces = '5'
-
-        Form = "GameXonotic"
-      }
     }
 
     Files:config =
@@ -8609,113 +8539,6 @@ QQRKSRC1
       {
         t_DefaultTextureCaulk = !
         GameCfg = "WildWest"
-      }
-      3DLight: =
-      {
-        Txt = "Game Light saturation"
-        Typ = "EF1"
-        Hint = "Larger values make darker scenes. Only works is lighting has been enabled."
-      }
-      DecimalPlaces: = {
-        Txt = "No. of decimal places for brushes and beziers."
-        Typ = "EF1"
-        Hint="Set for the number of decimals to write to the map file."$0D"The default is for this game is 5 places."
-        Min = '1'
-        Max = '40'
-      }
-      sep:        = {Typ="S" Txt = ""}
-      sep:        = {Typ="S" Txt="---- Build Programs Execution Sequence ----"}
-      t_GameBuildPgms=!
-    }
-
-    GameXonotic:form =
-    {
-      Style = "3"
-      sep: = {Typ="S" Txt="---- Game Settings ----"}
-      Program: = {
-        Typ = "C"     // combo box
-        Txt = "Xonotic command-line"
-        Items = "xonotic-sdl.exe +map %filename% +seta sv_pure 0"
-             $0D"xonotic-sdl.exe +map %filename% +seta sv_cheats "$22"1"$22" +bind ~ "$22"toggleconsole"$22" +seta ui_console "$22"1"$22" +bind g "$22"god"$22" + bind i "$22"give all"$22" + bind n "$22"noclip"$22
-             $0D"xonotic.exe +map %filename% +seta sv_pure 0"
-             $0D"xonotic.exe +map %filename% +bind ~ "$22"toggleconsole"$22" +seta ui_console "$22"1"$22" +bind g "$22"god"$22" + bind i "$22"give all"$22" + bind n "$22"noclip"$22
-        t_ProgramHint=!
-      }
-      Directory: =
-      {
-        Txt = "Xonotic"
-        Typ = "ED"      // Edit Directory
-        Hint = "Path to the game executable"
-        CheckFile = "xonotic-sdl.exe"
-      }
-      Templates: =
-      {
-        Txt = "Directory of Templates"
-        Typ = "ED"
-        Hint = "Path to the templates folder. A folder must be chosen"$0D"before any template functions can be used."
-      }
-      CD: =
-      {
-        Txt = "Xonotic CD-ROM drive"
-        Typ = "ED"      // Edit Directory
-        Hint = "If you installed Xonotic minimally, this is the drive of the CD-ROM."
-        CheckFile = "*.pk3"
-      }
-      AddOns:tbbtn =       // button (don't forget :tbbtn for all the action buttons !)
-      {
-        Typ = "+"
-        Txt = "Installed Add-ons"
-        Cap = "Add-ons..."
-        Icon = $666008881111111866604441999799916660CCC1101111116660244404555548
-               $66602C2AA478887866602C4A24787F78666022AC48778878666022CC47888878
-               $666000407787877866608777777777784448444844487F785C77CF77CC487778
-               $5CC7C777CC488880055555555548870666608888888800666666666666666666
-        cmd:macro = {Typ="M" Msg="GAMy"}    // switches to Xonotic (cmd=GAM, game=y)
-        cmd:macro = {Typ="M" Msg="ADDO"}    // opens Add-ons configuration dialog box
-      }
-      Outp:tbbtn =
-      {
-        Typ = "+"
-        Txt = "Paths and files to create"
-        Cap = "Output directories..."
-        Icon = $666660000066666666660232AA20666660003332ABA0206602303332ABB0
-               $FA0603303332ABB0FBA003303332AAB0FBB0033033222AA0FBB0033022AA
-               $A220FBB00322022AA2022AA002AA2022002AA2A00AAAA20022AAAA20602A
-               $0022002A200666002AAAA20006666666002A200666666666660006666666
-        cmd:macro = {Typ="M" Msg="GAMy"}    // switches to Xonotic (cmd=GAM, game=y)
-        cmd:macro = {Typ="M" Msg="OUTP"}    // opens "Output directories" dialog box
-      }
-      sep: = {Typ="S" Txt = ""}
-      sep: = {Typ="S" Txt="---- Map-editor Settings ----"}
-      DefaultTexture: =
-      {
-        t_DefaultTexture = !
-        GameCfg = "Xonotic"
-      }
-      DefaultTextureTerrain: =
-      {
-        t_DefaultTextureTerrain = !
-        GameCfg = "Xonotic"
-      }
-      DefaultTextureTrigger: =
-      {
-        t_DefaultTextureTrigger = !
-        GameCfg = "Xonotic"
-      }
-      DefaultTextureClip: =
-      {
-        t_DefaultTextureClip = !
-        GameCfg = "Xonotic"
-      }
-      DefaultTextureOrigin: =
-      {
-        t_DefaultTextureOrigin = !
-        GameCfg = "Xonotic"
-      }
-      DefaultTextureCaulk: =
-      {
-        t_DefaultTextureCaulk = !
-        GameCfg = "Xonotic"
       }
       3DLight: =
       {
