@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 6
 ============
+* [cdunde/DanielPharos]: Removed game support for Xonotic due to improper texture paths.
+
 * [cdunde]: Added full game support for Xonotic including .md3 model displaying.
 
 * [DanielPharos]: Fully fixed HL1 BSP MipTex saving.
